<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/twitter_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText"/>

        <TextView
            android:id="@+id/status"
            android:text="@string/signed_out"
            style="@style/ThemeOverlay.MyTextDetail"/>

        <TextView
            android:id="@+id/detail"
            tools:text="Firebase User ID: 123456789abc"
            style="@style/ThemeOverlay.MyTextDetail"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300">

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/button_twitter"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_twitter_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Menu"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>